# pySEB

./: .gitignore  CMakeLists.txt  CMakeLists.txt.new  MANIFEST.in  PYTHON_GUIDE.md  PYTHON_INSTALL.md  PYTHON_README.md  README.md  SYMBOLIC_ABSTRACTION.md  SYMBOLIC_ABSTRACTION_DETAILS.md  SYMBOLIC_ABSTRACTION_SUMMARY.md  SYMBOLIC_BACKENDS.md  makefile  pyproject.toml  setup.py
.github/workflows/: documentation.yml  packaging.yml  release.yml
Examples/: DiBlockStarChain.cpp  Evaluating.cpp  Micelle.cpp  Output.cpp  SymbolInterface.cpp  SymbolicInterface  SymbolicInterface.cpp  diblock_copolymer.py  diblock_copolymer_sympy.py  micelle.py
Mathematica/Sampled/: GenerateSamples.hpp  Sample_SolidCylinder.cpp  Sample_SolidSphere.cpp  Sample_SolidSphericalShell.cpp  Sample_ThinDisk.cpp
PaperFigs/: fig13_starchain.cpp  fig3_contour2contour.cpp  fig3_end2contour.cpp  fig3_end2end.cpp
SEB/: CMakeLists.txt  Expression.hpp  Expression.hpp.new  ExpressionFunctions.hpp  GiNaCExpression.hpp  GiNaCSymbolic.cpp  GiNaCSymbolic.hpp  Makefile.test  RegisterSpecialFunctions.cpp  SpecialFunctions.hpp  SpecialFunctionsWrapper.cpp  SpecialFunctionsWrapper.hpp  Subunit.cpp  Subunit.hpp  SymPySymbolic.hpp  SymbolInterface.cpp  SymbolInterface.hpp  Symbolic.hpp  SymbolicInterface.cpp  SymbolicInterface.hpp  SymbolicPortable.cpp  Types.hpp  World.cpp  World.hpp  test_expression.cpp
SEB/Subunits/: GaussianPolymer.hpp  SolidCylinder.hpp  SolidSphericalShell.hpp  ThinCircle.hpp  ThinDisk.hpp  ThinRod.hpp  ThinSphericalShell.hpp
Tests/: CMakeCache.txt  CMakeLists.txt  PaperFigs_test.cpp  README.md  Sample_SolidCylinder_test.cpp  Sample_SolidSphere_test.cpp  Sample_SolidSphericalShell_test.cpp  Sample_ThinDisk_test.cpp  numerical_subunit_tests.cpp  pdb_parser_tests.cpp  seb_symbolic_test.cpp  structure_tests.cpp  utility_test.cpp  validation_tests.cpp
ci/: installed_wheel_smoke.py
cmake/: FindCLN.cmake  FindGiNaC.cmake  SEBSymbolicConfig.cmake.in
docs/: .gitignore  _quarto.yml  index.qmd  python.md  symbolic-backends.md
docs/design/: symbolic-abstraction-details.md  symbolic-abstraction-summary.md  symbolic-abstraction.md
docs/tutorials/: _helpers.py  cpp_tutorials.qmd  diblock-copolymer.qmd  figure13-star-chain.qmd  index.qmd  micelle.qmd  nested-structures.qmd  parameter-sweeps.qmd  pdb-polymer.qmd  pyseb_tutorial.qmd  random-walk-rods.qmd  scattering-quantities.qmd  symbolic-expressions.qmd
docs/tutorials/cpp/: CMakeLists.txt  diblock.cpp  figure13-star-chain.cpp  inspect-structures.cpp  micelle.cpp  nested-structures.cpp  parameter-sweep.cpp  pdb-polymer.cpp  random-walk-rods.cpp  scattering-quantities.cpp  symbolic-expressions.cpp
examples/python/: sympy_example.py
pyseb/: __init__.py  __init__.py.new  subunits.py  symbolic.py  utils.py
pyseb/bindings/: bindings.cpp  bindingsTypes.cpp
pyseb/examples/python/: backend_simplification_comparison.py  crambin_form_factor.py  crambin_polymer_form_factor.py  debye_sphere_cloud.py  diblock_evaluation.py  figure13_star_chain.py  micelle_evaluation.py  nested_structures.py  symbolic_backend.py  symbolic_integral.py  sympy_example.py
pyseb/pyseb/: __init__.py
pyseb/tests/python/: test_pyseb_smoke.py
seb/: Abstract_subunit.hpp  SEB.hpp  SpecialFunctions.cpp  SpecialFunctionsWrapper.cpp  SpecialFunctionsWrapper.hpp  Subunit.cpp  Subunit.hpp  Types.hpp  World.cpp  World.hpp
seb-symbolic/: Expression.hpp  ExpressionFunctions.hpp  RegisterSpecialFunctions.cpp  Symbolic.hpp  SymbolicInterface.cpp  SymbolicPortable.cpp  SymbolicPortable.hpp
seb-symbolic-ginac/: GiNaCExpression.hpp  RegisterSpecialFunctions.cpp
seb/Geometry/: Point3D.hpp
seb/StructureIO/: AtomCloudBuilder.cpp  AtomCloudBuilder.hpp  AtomParameterProfile.cpp  AtomParameterProfile.hpp  AtomRecord.hpp  PDBParser.cpp  PDBParser.hpp  StructureIO.hpp  StructureParser.hpp
seb/Subunits/: Constants.hpp  DebyeSphereCloud.hpp  GaussianLoop.hpp  GaussianPolymer.hpp  Numerical.hpp  Point.hpp  README  SolidCylinder.hpp  SolidSphere.hpp  Subunits.hpp  Symbolic.hpp  ThinCircle.hpp  ThinDisk.hpp
src/: bindings.cpp  bindingsFallback.cpp  bindingsFallback.hpp  bindingsGiNaC.cpp  bindingsGiNaC.hpp  bindingsSymPy.cpp  bindingsSymPy.hpp  bindingsSymbolic.cpp  bindingsSymbolic.hpp  bindingsTypes.cpp  symbolic_bindings.cpp  symbolic_bindings_part1.cpp  symbolic_bindings_part2.cpp  symbolic_bindings_part3.cpp  symbolic_bindings_part4.cpp  symbolic_bindings_part5.cpp  utility.cpp
tests/python/: test_pyseb_smoke.py
work/: Evaluating
