[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.18", "scikit-build>=0.11.0", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyseb"
version = "0.1.0"
description = "Python bindings for the Scattering Equation Builder (SEB) library"
readme = "README.md"
authors = [
    {name = "SEB Team"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "sympy>=1.12",
]

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.source-dir = "."
cmake.build-type = "Release"
cmake.install-dir = "pyseb"

[tool.scikit-build.cmake.define]
BUILD_PYTHON = "ON"
SEB_ENABLE_GINAC_BACKEND = "OFF"
CMAKE_INSTALL_RPATH_USE_LINK_PATH = "ON"
CMAKE_INSTALL_RPATH = "$ORIGIN"

[project.urls]
Homepage = "https://github.com/Tobionecenobi/SEB"
"Bug Tracker" = "https://github.com/Tobionecenobi/SEB/issues"
