[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.18", "scikit-build>=0.11.0", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyseb"
version = "0.1.0"
description = "Python bindings for the Scattering Equation Builder (SEB) library"
readme = "README.md"
authors = [
    {name = "SEB Team"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "sympy>=1.12",
]

[tool.scikit-build]
cmake.version = ">=3.18"
cmake.source-dir = "."
cmake.build-type = "Release"
cmake.install-dir = "pyseb"

[tool.scikit-build.cmake.define]
BUILD_PYTHON = "ON"
SEB_ENABLE_GINAC_BACKEND = "OFF"
CMAKE_INSTALL_RPATH_USE_LINK_PATH = "ON"
CMAKE_INSTALL_RPATH = "$ORIGIN"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux_* *-manylinux_i686 *-win32 *-win_arm64"
test-command = "python {project}/ci/installed_wheel_smoke.py"
test-skip = "*-macosx_arm64"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "yum install -y gsl-devel"
environment = { CMAKE_ARGS = "-DBUILD_PYTHON=ON -DSEB_ENABLE_GINAC_BACKEND=OFF" }

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = "brew install gsl"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
environment = { CMAKE_ARGS = "-DBUILD_PYTHON=ON -DSEB_ENABLE_GINAC_BACKEND=OFF -DCMAKE_PREFIX_PATH=/opt/homebrew;/usr/local" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = "vcpkg install gsl:x64-windows"
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
environment = { CMAKE_ARGS = "-DBUILD_PYTHON=ON -DSEB_ENABLE_GINAC_BACKEND=OFF -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-windows" }

[project.urls]
Homepage = "https://github.com/Tobionecenobi/SEB"
"Bug Tracker" = "https://github.com/Tobionecenobi/SEB/issues"
